# Heart-Disease-Prediction

./: .dockerignore  Dockerfile  Notebook_P1.ipynb  Notebook_P1.py  Notebook_P2.ipynb  README.md  Untitled.ipynb  data.csv.1  fly.toml  main.py  marketing.py  marketinng.py  patient  ping.py  predict.py  predict_old.py  pyproject.toml  train.py  train_not_working.py
.ipynb_checkpoints/: Notebook_P1-checkpoint.ipynb
